# voxel-racing

./: .clang-format  .gitignore  LICENSE  README.md  meson.build
godot/: core.gd  core.gd.uid  icon.svg.import  main.tscn1166790469.tmp  player.gd  player.gd.uid  project.godot
include/voxelracing/: voxelracing.hpp
src/: lib.cpp  main.cpp
src/tests/: basics.cpp
subprojects/: websocketpp.wrap
